Fix tooltip text being wrong when setting client id/secret on osu! usercard

--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -13,7 +13,7 @@ Information=A usercard that lists the important stats of osu!.
 DropdownHeight=(40 + (#SidePadding# * 2))
 BaseRegExp=(?siU).*"avatar_url":"(.*)",.*"id":(.*),.*"username":"(.*)",.*"cover_url":"(.*)",.*"current":(.*),.*"progress":(.*)\},.*"global_rank":(.*),.*"pp":(.*),.*"hit_accuracy":(.*),.*"ss":(.*),.*"ssh":(.*),.*"s":(.*),.*"sh":(.*),.*"a":(.*)},
 InvalidUserRegExp=(?siU).*"error".*
-OsuFinishAction=[!ShowMeter meterMode][!SetOption meterMode LeftMouseUpAction """[!SetOption meterMode LeftMouseUpAction ""][!EnableMeasure measureMode][!UpdateMeasure measureMode][!UpdateMeasure measureModeIcon][!CommandMeasure measureData Update][!UpdateMeter meterMode][!Redraw]"""][!DisableMeasure measureChangeRegExp][!EnableMeasure measureUserIDString][!EnableMeasure measureMinimal][!UpdateMeasure measureMinimal][!SetOption meterCard Text "[measureUserName]#CRLF#%1#CRLF#%2#CRLF#%3"][!UpdateMeter meterCard][!Redraw]#BaseFinishAction#[!EnableMeasure measureAvatarDownload][!EnableMeasure measureCoverDownload][!CommandMeasure measureAvatarDownload "Update"][!CommandMeasure measureCoverDownload "Update"]
+OsuFinishAction=[!ShowMeter meterMode][!SetOption meterMode LeftMouseUpAction """[!SetOption meterMode LeftMouseUpAction ""][!EnableMeasure measureMode][!UpdateMeasure measureMode][!UpdateMeasure measureModeIcon][!CommandMeasure measureData Update][!UpdateMeter meterMode][!Redraw]"""][!DisableMeasure measureChangeRegExp][!EnableMeasure measureUserIDString][!EnableMeasure measureMinimal][!UpdateMeasure measureMinimal][!SetOption meterCard Text "[measureUserName]#CRLF#%1#CRLF#%2#CRLF#%3"][!UpdateMeter meterCard][!Redraw]#BaseFinishAction#[!EnableMeasure measureAvatarDownload][!EnableMeasure measureCoverDownload][!CommandMeasure measureAvatarDownload "Update"][!CommandMeasure measureCoverDownload "Update"][!SetOption meterClick ToolTipText "Left: Change Username"]
 
 [measureMode]
 Measure=String
@@ -75,7 +75,7 @@ IfTrueAction2=[!EnableMeasure measureCheckID][!UpdateMeasure measureCheckID][!Di
 Measure=String
 String=#OsuClientID#
 IfMatch=-1
-IfMatchAction=[!SetOption meterCard Text "Click to enter client id"][!SetOption measureInput Command1 """[!WriteKeyValue Variables OsuClientID $UserInput$ "#@#Variables/apivariables.inc"][!RefreshGroup osu]""""][!SetOption measureInput DefaultValue "Enter client id"]
+IfMatchAction=[!SetOption meterCard Text "Click to enter client id"][!SetOption measureInput Command1 """[!WriteKeyValue Variables OsuClientID $UserInput$ "#@#Variables/apivariables.inc"][!RefreshGroup osu]""""][!SetOption measureInput DefaultValue "Enter client id"][!SetOption meterClick TooltipText "Right: Go to osu! account settings"][!SetOption meterClick RightMouseUpAction "https://osu.ppy.sh/home/account/edit"]
 IfNotMatchAction=[!EnableMeasure measureCheckSecret][!UpdateMeasure measureCheckSecret][!DisableMeasure measureCheckSecret]
 Disabled=1
 
@@ -83,7 +83,7 @@ Disabled=1
 Measure=String
 String=#OsuClientSecret#
 IfMatch=-1
-IfMatchAction=[!SetOption meterCard Text "Click to enter client secret"][!SetOption measureInput Command1 """[!WriteKeyValue Variables OsuClientSecret $UserInput$ "#@#Variables/apivariables.inc"][!RefreshGroup osu]""""][!SetOption measureInput DefaultValue "Enter client secret"]
+IfMatchAction=[!SetOption meterCard Text "Click to enter client secret"][!SetOption measureInput Command1 """[!WriteKeyValue Variables OsuClientSecret $UserInput$ "#@#Variables/apivariables.inc"][!RefreshGroup osu]""""][!SetOption measureInput DefaultValue "Enter client secret"][!SetOption meterClick TooltipText "Right: Go to osu! account settings"][!SetOption meterClick RightMouseUpAction "https://osu.ppy.sh/home/account/edit"]
 IfNotMatchAction=[!CommandMeasure measureToken "Run"]
 Disabled=1
 
@@ -404,7 +404,6 @@ H=29
 SolidColor=#ClickableTransparentColor#
 AntiAlias=1
 LeftMouseUpAction=!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]
-ToolTipText=Left: Change Username
 ToolTipTitle=Actions
 
 [measureLightMode]
