Specify discord on timestamp generator

--- a/Time/Digital/Digital.ini
+++ b/Time/Digital/Digital.ini
@@ -135,7 +135,7 @@ Group=TextGroup
 MouseOverAction=#HorizontalExpandCommand#
 MouseLeaveAction=#HorizontalCollapseCommand#
 LeftMouseUpAction=[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!Redraw]
-ToolTipText=click to toggle timestamp generator
+ToolTipText=click to toggle discord timestamp generator
 
 [meterDropdownBackground]
 Meter=Shape
