Add tooltip and right action to "weather" skin

--- a/Weather/Weather.ini
+++ b/Weather/Weather.ini
@@ -21,7 +21,7 @@ text=PM2.5
 Measure=String
 String=#WeatherAPIKey#
 IfMatch=-1
-IfMatchAction=[!SetOption meterSide Text "#Label# Enter key"][!SetOption meterClick LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]"""]
+IfMatchAction=[!SetOption meterSide Text "#Label# Enter key"][!SetOption meterClick LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]"""][!SetOption meterClick TooltipText "Right: Go to IQAir API dashboard"][!SetOption meterClick RightMouseUpAction "https://www.iqair.com/us/dashboard/api"]
 IfNotMatchAction=[!EnableMeasure measureCity][!CommandMeasure measureCity "Update"]
 
 [measureCity]
