Fix gradient of settings skin applying one second late
Was conflicting with global one.

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -24,10 +24,10 @@ IfTrueAction=[!SetVariable ToggleExpanded 1]#VerticalCollapseCommand#
 IfFalseAction=[!SetVariable ToggleExpanded 0]#VerticalExpandCommand#
 DynamicVariables=1
 
-[measureGradient]
+[measureGradientSetting]
 Measure=Calc
 Formula=#Gradient#
-IfCondition=measureGradient = 0
+IfCondition=measureGradientSetting = 0
 IfTrueAction=[!SetOption meterToggleGradient Text [\xf204]][!SetVariable ToggleGradient 1]
 IfFalseAction=[!SetOption meterToggleGradient Text [\xf205]][!SetVariable ToggleGradient 0]
 DynamicVariables=1
