Add highest rank as tooltip on osu! usercard

--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -11,7 +11,7 @@ Information=A usercard that lists the important stats of osu!.
 
 [Variables]
 DropdownHeight=(40 + (#SidePadding# * 2))
-BaseRegExp=(?siU).*"avatar_url":"(.*)",.*"id":(.*),.*"username":"(.*)",.*"cover_url":"(.*)",.*"current":(.*),.*"progress":(.*)\},.*"global_rank":(.*),.*"pp":(.*),.*"hit_accuracy":(.*),.*"ss":(.*),.*"ssh":(.*),.*"s":(.*),.*"sh":(.*),.*"a":(.*)},
+BaseRegExp=(?siU).*"avatar_url":"(.*)",.*"id":(.*),.*"username":"(.*)",.*"cover_url":"(.*)",.*"rank_highest":{"rank":(.*),"updated_at":"(.*)"}.*"current":(.*),.*"progress":(.*)\},.*"global_rank":(.*),.*"pp":(.*),.*"hit_accuracy":(.*),.*"ss":(.*),.*"ssh":(.*),.*"s":(.*),.*"sh":(.*),.*"a":(.*)},
 InvalidUserRegExp=(?siU).*"error".*
 OsuFinishAction=[!ShowMeter meterMode][!SetOption meterMode LeftMouseUpAction """[!SetOption meterMode LeftMouseUpAction ""][!EnableMeasure measureMode][!UpdateMeasure measureMode][!UpdateMeasure measureModeIcon][!CommandMeasure measureData Update][!UpdateMeter meterMode][!Redraw]"""][!DisableMeasure measureChangeRegExp][!EnableMeasure measureUserIDString][!EnableMeasure measureMinimal][!UpdateMeasure measureMinimal][!SetOption meterCard Text "[measureUserName]#CRLF#%1#CRLF#%2#CRLF#%3"][!UpdateMeter meterCard][!Redraw]#BaseFinishAction#[!EnableMeasure measureAvatarDownload][!EnableMeasure measureCoverDownload][!CommandMeasure measureAvatarDownload "Update"][!CommandMeasure measureCoverDownload "Update"][!SetOption meterClick ToolTipText "Left: Change Username"]
 
@@ -58,6 +58,7 @@ RegExp=#BaseRegExp#
 FinishAction=#OsuFinishAction#
 ;on first error, check for invalid user. on second error, refresh token.
 OnRegExpErrorAction=#BaseOnRegExpErrorAction#[!HideMeter meterMode][!EnableMeasure measureChangeRegExp][!UpdateMeasure measureChangeRegExp][!CommandMeasure measureData Update]
+; Debug=2
 
 [measureChangeRegExp]
 Measure=Loop
@@ -133,24 +134,50 @@ Download=1
 DownloadFile=cover.jpg
 Disabled=1
 
-[measureLevel]
+[measureHighestRankWeb]
 Measure=WebParser
 URL=[measureData]
 StringIndex=5
+RegExpSubstitute=1
+Substitute=#FormatNumberWithCommas#
+
+[measureHighestRank]
+Measure=String
+DynamicVariables=1
+String=[measureHighestRankWeb]
+RegExpSubstitute=1
+Substitute='(.+)':"#\1"
+
+[measureHighestRankDateWeb]
+Measure=WebParser
+URL=[measureData]
+StringIndex=6
+
+[measureHighestRankDate]
+Measure=Time
+DynamicVariables=1
+Timestamp=[measureHighestRankDateWeb]
+TimeStampFormat=%Y-%m-%dT%H:%M:%SZ
+Format=%#d %b %Y
+
+[measureLevel]
+Measure=WebParser
+URL=[measureData]
+StringIndex=7
 RegExpSubstitute=1
 Substitute='(.+)':"LV\1"
 
 [measurePercent]
 Measure=WebParser
 URL=[measureData]
-StringIndex=6
+StringIndex=8
 MinValue=0
 MaxValue=100
 
 [measurePPString]
 Measure=WebParser
 URL=[measureData]
-StringIndex=8
+StringIndex=10
 
 [measurePPCalc]
 Measure=Calc
@@ -168,7 +195,7 @@ Substitute='(.+)':"Performance: \1pp"
 [measureRankWeb]
 Measure=WebParser
 URL=[measureData]
-StringIndex=7
+StringIndex=9
 RegExpSubstitute=1
 Substitute=#FormatNumberWithCommas#
 
@@ -182,7 +209,7 @@ Substitute='(.+)':"#\1"
 [measureAccString]
 Measure=WebParser
 URL=[measureData]
-StringIndex=9
+StringIndex=11
 
 [measureAcc]
 Measure=Calc
@@ -193,27 +220,27 @@ Substitute='(.+)':"Accuracy: \1%"
 [measureSS]
 Measure=WebParser
 URL=[measureData]
-StringIndex=10
+StringIndex=12
 
 [measureSSH]
 Measure=WebParser
 URL=[measureData]
-StringIndex=11
+StringIndex=13
 
 [measureS]
 Measure=WebParser
 URL=[measureData]
-StringIndex=12
+StringIndex=14
 
 [measureSH]
 Measure=WebParser
 URL=[measureData]
-StringIndex=13
+StringIndex=15
 
 [measureA]
 Measure=WebParser
 URL=[measureData]
-StringIndex=14
+StringIndex=16
 
 [meterAvatar]
 MeasureName=measureAvatarDownload
@@ -260,6 +287,8 @@ Padding=0,0,#SidePadding#,(#SidePadding# / 2)
 X=R
 Y=R
 Text=%1
+TooltipText=Highest rank: [measureHighestRank] on [measureHighestRankDate]
+DynamicVariables=1
 
 [meterMode]
 Meter=String
