Ignore beatmap cover images

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *.osu
 Games/osu\!/Usercard/DownloadFile/avatar.jpg
 Games/osu\!/Usercard/DownloadFile/cover.jpg
+Games/osu\!/Recent/DownloadFile/cover.jpg
+Games/osu\!/Best/DownloadFile/cover.jpg
