Add color indicator on bars based on value

--- a/Ping/Ping.ini
+++ b/Ping/Ping.ini
@@ -20,6 +20,14 @@ MinValue=0
 MaxValue=100
 RegExpSubstitute=1
 Substitute="(.+)":"\1ms"
+IfCondition=(measurePing >= 0) && (measurePing <= 50)
+IfTrueAction=[!SetOption meterBar BarColor 0,228,0][!UpdateMeter meterBar][!Redraw]
+IfCondition2=(measurePing > 50) && (measurePing <= 75)
+IfTrueAction2=[!SetOption meterBar BarColor 255,255,0][!UpdateMeter meterBar][!Redraw]
+IfCondition3=(measurePing > 75) && (measurePing <= 90)
+IfTrueAction3=[!SetOption meterBar BarColor 255,126,0][!UpdateMeter meterBar][!Redraw]
+IfCondition4=(measurePing > 90)
+IfTrueAction4=[!SetOption meterBar BarColor 255,0,0][!UpdateMeter meterBar][!Redraw]
 
 [meterBackground]
 Group=OpaqueBackgroundGroup
