--- a/System/CPU/CPU.ini
+++ b/System/CPU/CPU.ini
@@ -15,6 +15,14 @@ text=CPU
 Measure=CPU
 RegExpSubstitute=1
 Substitute="(.+)":"\1%"
+IfCondition=(measureCPU >= 0) && (measureCPU <= 50)
+IfTrueAction=[!SetOption meterBar BarColor 0,228,0][!UpdateMeter meterBar][!Redraw]
+IfCondition2=(measureCPU > 50) && (measureCPU <= 75)
+IfTrueAction2=[!SetOption meterBar BarColor 255,255,0][!UpdateMeter meterBar][!Redraw]
+IfCondition3=(measureCPU > 75) && (measureCPU <= 90)
+IfTrueAction3=[!SetOption meterBar BarColor 255,126,0][!UpdateMeter meterBar][!Redraw]
+IfCondition4=(measureCPU > 90) && (measureCPU <= 100)
+IfTrueAction4=[!SetOption meterBar BarColor 255,0,0][!UpdateMeter meterBar][!Redraw]
 
 [meterSide]
 Meter=String
