--- a/System/Download/Download.ini
+++ b/System/Download/Download.ini
@@ -14,7 +14,15 @@ text=Download
 [measureDownload]
 Measure=NetIn
 MinValue=0
-MaxValue=1000000
+MaxValue=81920000
+IfCondition=(measureDownload >= 0) && (measureDownload <= 5120000)
+IfTrueAction=[!SetOption meterBar BarColor 0,228,0][!UpdateMeter meterBar][!Redraw]
+IfCondition2=(measureDownload > 5120000) && (measureDownload <= 7680000)
+IfTrueAction2=[!SetOption meterBar BarColor 255,255,0][!UpdateMeter meterBar][!Redraw]
+IfCondition3=(measureDownload > 7680000) && (measureDownload <= 10240000)
+IfTrueAction3=[!SetOption meterBar BarColor 255,126,0][!UpdateMeter meterBar][!Redraw]
+IfCondition4=(measureDownload > 10240000)
+IfTrueAction4=[!SetOption meterBar BarColor 255,0,0][!UpdateMeter meterBar][!Redraw]
 RegExpSubstitute=1
 Substitute="(.+)":"\1B"
 
