--- a/System/Memory/Memory.ini
+++ b/System/Memory/Memory.ini
@@ -11,10 +11,27 @@ Information=Checks RAM usage.
 icon=[\xf538]
 text=RAM
 
+[measureRamTotal]
+Measure=PhysicalMemory
+Total=1
+UpdateDivider=-1
+
 [measureRam]
 Measure=PhysicalMemory
 RegExpSubstitute=1
 Substitute="(.+)":"\1%"
+
+[measureRamPercent]
+Measure=Calc
+Formula=(100 * measureRam / measureRamTotal)
+IfCondition=(measureRamPercent >= 0) && (measureRamPercent <= 50)
+IfTrueAction=[!SetOption meterBar BarColor 0,228,0][!UpdateMeter meterBar][!Redraw]
+IfCondition2=(measureRamPercent > 50) && (measureRamPercent <= 75)
+IfTrueAction2=[!SetOption meterBar BarColor 255,255,0][!UpdateMeter meterBar][!Redraw]
+IfCondition3=(measureRamPercent > 75) && (measureRamPercent <= 90)
+IfTrueAction3=[!SetOption meterBar BarColor 255,126,0][!UpdateMeter meterBar][!Redraw]
+IfCondition4=(measureRamPercent > 90)
+IfTrueAction4=[!SetOption meterBar BarColor 255,0,0][!UpdateMeter meterBar][!Redraw]
 
 [meterBackground]
 Group=OpaqueBackgroundGroup
