--- a/System/Upload/Upload.ini
+++ b/System/Upload/Upload.ini
@@ -14,7 +14,15 @@ text=Upload
 [measureUpload]
 Measure=NetOut
 MinValue=0
-MaxValue=1000000
+MaxValue=8192000
+IfCondition=(measureUpload >= 0) && (measureUpload <= 512000)
+IfTrueAction=[!SetOption meterBar BarColor 0,228,0][!UpdateMeter meterBar][!Redraw]
+IfCondition2=(measureUpload > 512000) && (measureUpload <= 768000)
+IfTrueAction2=[!SetOption meterBar BarColor 255,255,0][!UpdateMeter meterBar][!Redraw]
+IfCondition3=(measureUpload > 7680000) && (measureUpload <= 1024000)
+IfTrueAction3=[!SetOption meterBar BarColor 255,126,0][!UpdateMeter meterBar][!Redraw]
+IfCondition4=(measureUpload > 1024000)
+IfTrueAction4=[!SetOption meterBar BarColor 255,0,0][!UpdateMeter meterBar][!Redraw]
 RegExpSubstitute=1
 Substitute="(.+)":"\1B"
 
