--- a/System/Uptime/Uptime.ini
+++ b/System/Uptime/Uptime.ini
@@ -15,6 +15,14 @@ text=Uptime
 Measure=Uptime
 MinValue=0
 MaxValue=(86400*7)
+IfCondition=(measureUptime >= 0) && (measureUptime <= 86400*3)
+IfTrueAction=[!SetOption meterBar BarColor 0,228,0][!UpdateMeter meterBar][!Redraw]
+IfCondition2=(measureUptime > 86400*3) && (measureUptime <= 86400*5)
+IfTrueAction2=[!SetOption meterBar BarColor 255,255,0][!UpdateMeter meterBar][!Redraw]
+IfCondition3=(measureUptime > 86400*5) && (measureUptime <= 86400*7)
+IfTrueAction3=[!SetOption meterBar BarColor 255,126,0][!UpdateMeter meterBar][!Redraw]
+IfCondition4=(measureUptime > 86400*7)
+IfTrueAction4=[!SetOption meterBar BarColor 255,0,0][!UpdateMeter meterBar][!Redraw]
 
 [meterSide]
 Meter=String
