Fix recycle bin skin not resizing correctly after emptying

--- a/Launchers/RecycleBin/default.ini
+++ b/Launchers/RecycleBin/default.ini
@@ -23,6 +23,7 @@ IfFalseAction=[!SetVariable ItemUnit items][!UpdateMeter meterIcon]
 IfCondition2=measureBinCount > 0
 IfTrueAction2=[!SetOption meterIcon RightMouseUpAction """[!CommandMeasure measureBinCount "EmptyBin"]"""]
 IfFalseAction2=[!SetOption meterIcon RightMouseUpAction ""]
+OnChangeAction=[!UpdateMeter meterIcon]
 
 [meterIcon]
 MeasureName=measureBinSize
