Improve "dropdown" background to look more connected from origin

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -70,6 +70,9 @@ Group=TextGroup
 [meterDropdownBackground]
 Meter=Shape
 Shape=Rectangle 0,0,[meterDropdown:W],[meterDropdown:H],#CornerRadius# | Fill LinearGradient Gradient | StrokeWidth 0
+Shape2=Rectangle 0,-#CornerRadius#,[meterDropdown:W],[meterDropdown:H],0
+Shape3=Rectangle 0,(-#CornerRadius# * 2),[meterDropdown:W],(#CornerRadius# * 2),#CornerRadius#
+Shape4=Combine Shape | Union Shape2 | Exclude Shape3
 ;add placeholder option to hide errors
 Gradient=0 | 0,0,0,0 ; 0.0
 DynamicVariables=1
