--- a/Time/Digital/Digital.ini
+++ b/Time/Digital/Digital.ini
@@ -128,6 +128,9 @@ ToolTipText=click to toggle discord timestamp generator
 [meterDropdownBackground]
 Meter=Shape
 Shape=Rectangle 0,0,[meterDropdown:W],[meterDropdown:H],#CornerRadius# | Fill LinearGradient Gradient | StrokeWidth 0
+Shape2=Rectangle -#CornerRadius#,0,[meterDropdown:W],[meterDropdown:H],0
+Shape3=Rectangle (-#CornerRadius# * 2),0,(#CornerRadius# * 2),[meterDropdown:H],#CornerRadius#
+Shape4=Combine Shape | Union Shape2 | Exclude Shape3
 ;add placeholder option to hide errors
 Gradient=0 | 0,0,0,0 ; 0.0
 DynamicVariables=1
