Don't show tooltip after opening timestamp generator for the first time

--- a/Time/Digital/Digital.ini
+++ b/Time/Digital/Digital.ini
@@ -12,6 +12,7 @@ Information=Checks time using digital.
 
 [Variables]
 DropdownHeight=280
+InitialTimestampOpened=0
 
 [MeasureWindowsTime]
 Measure=Time
@@ -122,8 +123,15 @@ Padding=#PaddingSize#
 Group=TextGroup
 MouseOverAction=#HorizontalExpandCommand#
 MouseLeaveAction=#HorizontalCollapseCommand#
-LeftMouseUpAction=[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!Redraw]
-ToolTipText=click to toggle discord timestamp generator
+LeftMouseUpAction=[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!WriteKeyValue Variables InitialTimestampOpened 1][!SetVariable InitialTimestampOpened 1][!Redraw]
+
+[measureInitialTimestampOpen]
+Measure=Calc
+Formula=#InitialTimestampOpened#
+IfCondition=measureInitialTimestampOpen = 0
+IfTrueAction=[!SetOption meterEdge ToolTipText "click to toggle discord timestamp generator"]
+IfFalseAction=[!SetOption meterEdge ToolTipText ""]
+DynamicVariables=1
 
 [meterDropdownBackground]
 Meter=Shape
