Use environmental variables for api keys / tokens
Limitation is that Rainmeter needs to be restarted. No visual feedback saying so, coming later.

--- a/Games/osu!/Recent/Recent.ini
+++ b/Games/osu!/Recent/Recent.ini
@@ -22,7 +22,7 @@ Measure=WebParser
 URL=#HostName#/beatmaps/[&measureID]/scores/users/#UserID#
 DynamicVariables=1
 UpdateDivider=-1
-Header=Authorization: Bearer #OsuToken#
+Header=Authorization: Bearer %UheOsuToken%
 RegExp=(?siU)#AccuracyRegExp##BestIDRegExp##CreatedAtRegExp##MaxComboRegExp##ModsRegExp##PPRegExp##RankRegExp##ScoreRegExp##Count100RegExp##Count300RegExp##Count50RegExp##CountMissRegExp#
 Disabled=1
 FinishAction=[!EnableMeasure measureSameScore][!UpdateMeasure measureSameScore][!DisableMeasure measureSameScore]
