--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -52,7 +52,7 @@ IfMatchAction4=[!SetOption meterMode Text "[\xf550]"][!SetOption meterMode FontF
 [measureData]
 DynamicVariables=1
 URL=#HostName#/users/#Username#/#Mode#
-Header=Authorization: Bearer #OsuToken#
+Header=Authorization: Bearer %UheOsuToken%
 UpdateRate=3600
 RegExp=#BaseRegExp#
 FinishAction=#OsuFinishAction#
@@ -74,19 +74,36 @@ IfTrueAction2=[!EnableMeasure measureCheckID][!UpdateMeasure measureCheckID][!Di
 
 [measureCheckID]
 Measure=String
-String=#OsuClientID#
-IfMatch=-1
-IfMatchAction=[!SetOption meterCard Text "Click to enter client id"][!SetOption measureInput Command1 """[!WriteKeyValue Variables OsuClientID $UserInput$ "#@#Variables/apivariables.inc"][!RefreshGroup osu]""""][!SetOption measureInput DefaultValue "Enter client id"][!SetOption meterClick TooltipText "Right: Go to osu! account settings"][!SetOption meterClick RightMouseUpAction "https://osu.ppy.sh/home/account/edit"]
+DynamicVariables=1
+String=%UheOsuClientID%
+IfMatch=\%UheOsuClientID\%
+IfMatchAction=[!SetOption meterCard Text "Click to enter client id"][!SetOption measureInput Command1 """[!SetVariable inputClientID $UserInput$][!UpdateMeasure measureSetClientID][!CommandMeasure measureSetClientID Run]"""][!SetOption measureInput DefaultValue "Enter client id"][!SetOption meterClick TooltipText "Right: Go to osu! account settings"][!SetOption meterClick RightMouseUpAction "https://osu.ppy.sh/home/account/edit"]
 IfNotMatchAction=[!EnableMeasure measureCheckSecret][!UpdateMeasure measureCheckSecret][!DisableMeasure measureCheckSecret]
 Disabled=1
 
+[measureSetClientID]
+Measure=Plugin
+Plugin=RunCommand
+DynamicVariables=1
+Parameter=setx UheOsuClientID #inputClientID#
+FinishAction=[!Quit]
+OutputType=UTF8
+
 [measureCheckSecret]
 Measure=String
-String=#OsuClientSecret#
-IfMatch=-1
-IfMatchAction=[!SetOption meterCard Text "Click to enter client secret"][!SetOption measureInput Command1 """[!WriteKeyValue Variables OsuClientSecret $UserInput$ "#@#Variables/apivariables.inc"][!RefreshGroup osu]""""][!SetOption measureInput DefaultValue "Enter client secret"][!SetOption meterClick TooltipText "Right: Go to osu! account settings"][!SetOption meterClick RightMouseUpAction "https://osu.ppy.sh/home/account/edit"]
+String=%UheOsuClientSecret%
+IfMatch=\%UheOsuClientSecret\%
+IfMatchAction=[!SetOption meterCard Text "Click to enter client secret"][!SetOption measureInput Command1 """[!SetVariable inputClientSecret $UserInput$][!UpdateMeasure measureSetClientSecret][!CommandMeasure measureSetClientSecret Run]"""][!SetOption measureInput DefaultValue "Enter client secret"][!SetOption meterClick TooltipText "Right: Go to osu! account settings"][!SetOption meterClick RightMouseUpAction "https://osu.ppy.sh/home/account/edit"]
 IfNotMatchAction=[!CommandMeasure measureToken "Run"]
 Disabled=1
+
+[measureSetClientSecret]
+Measure=Plugin
+Plugin=RunCommand
+DynamicVariables=1
+Parameter=setx UheOsuClientSecret #inputClientSecret#
+FinishAction=[!Quit]
+OutputType=UTF8
 
 [measureAvatar]
 Measure=WebParser
