--- a/Weather/AQI/AQI.ini
+++ b/Weather/AQI/AQI.ini
@@ -19,17 +19,18 @@ text=PM2.5
 
 [measureCheckAPIKey]
 Measure=String
-String=#WeatherAPIKey#
-IfMatch=-1
+DynamicVariables=1
+String=%UheWeatherAPIKey%
+IfMatch=\%UheWeatherAPIKey\%
 IfMatchAction=[!SetOption meterSide Text "#Label# Enter key"][!SetOption meterClick LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]"""][!SetOption meterClick TooltipText "Right: Go to IQAir API dashboard"][!SetOption meterClick RightMouseUpAction "https://www.iqair.com/us/dashboard/api"]
 IfNotMatchAction=[!EnableMeasure measureCity][!CommandMeasure measureCity "Update"]
 
 [measureCity]
 Measure=WebParser
-URL=#HostName#/v#APIVersion#/city?city=#City#&state=#State#&country=#Country#&key=#WeatherAPIKey#
+URL=#HostName#/v#APIVersion#/city?city=#City#&state=#State#&country=#Country#&key=%UheWeatherAPIKey%
 RegExp=(?siU).*"aqius":(.*),.*
 UpdateRate=900
-OnRegExpErrorAction=[!SetOption meterSide Text "#Label# Invalid key"]
+OnRegExpErrorAction=[!SetOption meterSide Text "#Label# Invalid key"][!SetOption meterClick LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]"""][!SetOption meterClick TooltipText "Right: Go to IQAir API dashboard"][!SetOption meterClick RightMouseUpAction "https://www.iqair.com/us/dashboard/api"]
 Disabled=1
 
 [measureAQI]
@@ -64,7 +65,15 @@ Group=TextGroup | TextBoxGroup
 FontSize=15
 FontFace=#FontFace#
 AntiAlias=1
-Command1=[!WriteKeyValue Variables WeatherAPIKey $UserInput$ "#@#Variables/apivariables.inc"][!RefreshGroup weather]
+Command1=[!SetVariable inputAPIKey $UserInput$][!UpdateMeasure measureSetAPIKey][!CommandMeasure measureSetAPIKey Run]
+
+[measureSetAPIKey]
+Measure=Plugin
+Plugin=RunCommand
+DynamicVariables=1
+Parameter=setx UheWeatherAPIKey #inputAPIKey#
+FinishAction=[!Quit]
+OutputType=UTF8
 
 [meterClick]
 Meter=Image
