Refactor osu! key counter to not use hardcoded keys

--- a/KeyCounter/osu!.ini
+++ b/KeyCounter/osu!.ini
@@ -5,47 +5,49 @@
 Author=Joehu
 Version=1.0
 License=MIT License
-Information=A key counter for the A / S keys.
+Information=A key counter for osu! keys.
 
 [Variables]
 ButtonWidth=100
 ButtonHeight=70
+Key1=Z
+Key2=X
 
-[measureACounter]
+[measureKey1Counter]
 Measure=Loop
 StartValue=0
 EndValue=1000000
 UpdateDivider=-1
 
-[measureSCounter]
+[measureKey2Counter]
 Measure=Loop
 StartValue=0
 EndValue=1000000
 UpdateDivider=-1
 
-[measureAKey]
+[measureKey1]
 Measure=Plugin
 Plugin=HotKey
-HotKey=A
-KeyDownAction=[!SetOption meterAKey SolidColor #LightHighlight#,#NoGradientTransparency#][!UpdateMeter meterAKey][!Redraw]
-KeyUpAction=[!SetOption meterAKey SolidColor 0,0,0,0][!UpdateMeasure measureACounter][!UpdateMeter meterAKey][!Redraw]
+HotKey=#Key1#
+KeyDownAction=[!SetOption meterKey1 SolidColor #LightHighlight#,#NoGradientTransparency#][!UpdateMeter meterKey1][!Redraw]
+KeyUpAction=[!SetOption meterKey1 SolidColor 0,0,0,0][!UpdateMeasure measureKey1Counter][!UpdateMeter meterKey1][!Redraw]
 
-[measureSKey]
+[measureKey2]
 Measure=Plugin
 Plugin=HotKey
-HotKey=S
-KeyDownAction=[!SetOption meterSKey SolidColor #LightHighlight#,#NoGradientTransparency#][!UpdateMeter meterSKey][!Redraw]
-KeyUpAction=[!SetOption meterSKey SolidColor 0,0,0,0][!UpdateMeasure measureSCounter][!UpdateMeter meterSKey][!Redraw]
+HotKey=#Key2#
+KeyDownAction=[!SetOption meterKey2 SolidColor #LightHighlight#,#NoGradientTransparency#][!UpdateMeter meterKey2][!Redraw]
+KeyUpAction=[!SetOption meterKey2 SolidColor 0,0,0,0][!UpdateMeasure measureKey2Counter][!UpdateMeter meterKey2][!Redraw]
 
-[meterAKeyBackground]
+[meterKey1Background]
 Meter=Image
 W=#ButtonWidth#
 H=#ButtonHeight#
 Group=BackgroundGroup
 
-[meterAKey]
+[meterKey1]
 Meter=String
-Text=[measureACounter]#CRLF#A
+Text=[measureKey1Counter]#CRLF##Key1#
 StringAlign=CenterCenter
 X=(-#ButtonWidth# / 2)R
 Y=(#ButtonHeight# / 2)
@@ -56,16 +58,16 @@ FontSize=20
 AntiAlias=1
 Group=TextGroup
 
-[meterSKeyBackground]
+[meterKey2Background]
 Meter=Image
 X=(#ButtonWidth# / 2)r
 W=#ButtonWidth#
 H=#ButtonHeight#
 Group=BackgroundGroup
 
-[meterSKey]
+[meterKey2]
 Meter=String
-Text=[measureSCounter]#CRLF#S
+Text=[measureKey2Counter]#CRLF##Key2#
 StringAlign=CenterCenter
 X=(-#ButtonWidth# / 2)R
 Y=(#ButtonHeight# / 2)
