--- a/KeyCounter/osu!.ini
+++ b/KeyCounter/osu!.ini
@@ -29,15 +29,27 @@ UpdateDivider=-1
 Measure=Plugin
 Plugin=HotKey
 HotKey=#Key1#
-KeyDownAction=[!SetOption meterKey1 SolidColor #LightHighlight#,#NoGradientTransparency#][!UpdateMeter meterKey1][!Redraw]
-KeyUpAction=[!SetOption meterKey1 SolidColor 0,0,0,0][!UpdateMeasure measureKey1Counter][!UpdateMeter meterKey1][!Redraw]
+KeyDownAction=[!SetOption meterKey1 SolidColor #LightHighlight#,#NoGradientTransparency#][!SetOption measureKey1Pressed Formula 1][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
+KeyUpAction=[!SetOption meterKey1 SolidColor 0,0,0,0][!SetOption measureKey1Pressed Formula 0][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
 
 [measureKey2]
 Measure=Plugin
 Plugin=HotKey
 HotKey=#Key2#
-KeyDownAction=[!SetOption meterKey2 SolidColor #LightHighlight#,#NoGradientTransparency#][!UpdateMeter meterKey2][!Redraw]
-KeyUpAction=[!SetOption meterKey2 SolidColor 0,0,0,0][!UpdateMeasure measureKey2Counter][!UpdateMeter meterKey2][!Redraw]
+KeyDownAction=[!SetOption meterKey2 SolidColor #LightHighlight#,#NoGradientTransparency#][!SetOption measureKey2Pressed Formula 1][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
+KeyUpAction=[!SetOption meterKey2 SolidColor 0,0,0,0][!SetOption measureKey2Pressed Formula 0][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
+
+[measureKey1Pressed]
+Measure=Calc
+Formula=0
+IfCondition=measureKey1Pressed=1
+IfTrueAction=[!UpdateMeasure measureKey1Counter]
+
+[measureKey2Pressed]
+Measure=Calc
+Formula=0
+IfCondition=measureKey2Pressed=1
+IfTrueAction=[!UpdateMeasure measureKey2Counter]
 
 [meterKey1Background]
 Meter=Image
