Fix osu! key counter skin not having background

--- a/KeyCounter/osu!.ini
+++ b/KeyCounter/osu!.ini
@@ -29,15 +29,15 @@ UpdateDivider=-1
 Measure=Plugin
 Plugin=HotKey
 HotKey=#Key1#
-KeyDownAction=[!SetOption meterKey1 SolidColor #LightHighlight#,#NoGradientTransparency#][!SetOption measureKey1Pressed Formula 1][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
-KeyUpAction=[!SetOption meterKey1 SolidColor 0,0,0,0][!SetOption measureKey1Pressed Formula 0][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
+KeyDownAction=[!SetOption meterKey1Hover Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterKey1Hover][!SetOption measureKey1Pressed Formula 1][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
+KeyUpAction=[!SetOption meterKey1Hover Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterKey1Hover][!SetOption measureKey1Pressed Formula 0][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
 
 [measureKey2]
 Measure=Plugin
 Plugin=HotKey
 HotKey=#Key2#
-KeyDownAction=[!SetOption meterKey2 SolidColor #LightHighlight#,#NoGradientTransparency#][!SetOption measureKey2Pressed Formula 1][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
-KeyUpAction=[!SetOption meterKey2 SolidColor 0,0,0,0][!SetOption measureKey2Pressed Formula 0][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
+KeyDownAction=[!SetOption meterKey2Hover Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterKey2Hover][!SetOption measureKey2Pressed Formula 1][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
+KeyUpAction=[!SetOption meterKey2Hover Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterKey2Hover][!SetOption measureKey2Pressed Formula 0][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
 
 [measureKey1Pressed]
 Measure=Calc
@@ -52,10 +52,19 @@ IfCondition=measureKey2Pressed=1
 IfTrueAction=[!UpdateMeasure measureKey2Counter]
 
 [meterKey1Background]
-Meter=Image
-W=#ButtonWidth#
-H=#ButtonHeight#
+Meter=Shape
+Shape=Rectangle 0,0,#ButtonWidth#,#ButtonHeight#,#CornerRadius# | Fill LinearGradient Gradient | StrokeWidth 0
+;add placeholder option to hide errors
+Gradient=0 | 0,0,0,0 ; 0.0
+DynamicVariables=1
 Group=BackgroundGroup
+
+[meterKey1Hover]
+Meter=Shape
+Shape=Rectangle 0,0,#ButtonWidth#,#ButtonHeight#,#CornerRadius# | Extend Highlight | StrokeWidth 0
+;add placeholder option to hide errors
+Highlight=Fill Color 0,0,0,0
+DynamicVariables=1
 
 [meterKey1]
 Meter=String
@@ -69,13 +78,24 @@ FontFace=#FontFace#
 FontSize=20
 AntiAlias=1
 Group=TextGroup
+DynamicVariables=1
 
 [meterKey2Background]
-Meter=Image
+Meter=Shape
 X=(#ButtonWidth# / 2)r
-W=#ButtonWidth#
-H=#ButtonHeight#
-Group=BackgroundGroup
+Shape=Rectangle 0,0,#ButtonWidth#,#ButtonHeight#,#CornerRadius# | Fill LinearGradient Gradient | StrokeWidth 0
+;add placeholder option to hide errors
+Gradient=0 | 0,0,0,0 ; 0.0
+DynamicVariables=1
+Group=OpaqueBackgroundGroup
+
+[meterKey2Hover]
+Meter=Shape
+Shape=Rectangle 0,0,#ButtonWidth#,#ButtonHeight#,#CornerRadius# | Extend Highlight | StrokeWidth 0
+;add placeholder option to hide errors
+Highlight=Fill Color 0,0,0,0
+DynamicVariables=1
+X=r
 
 [meterKey2]
 Meter=String
@@ -89,3 +109,4 @@ FontFace=#FontFace#
 FontSize=20
 AntiAlias=1
 Group=TextGroup
+DynamicVariables=1
