Make WASD and Arrows use the same code

--- a/KeyCounter/Arrows.ini
+++ b/KeyCounter/Arrows.ini
@@ -1,5 +1,5 @@
 [Rainmeter]
-@Include=#@#Variables/mainvariables.inc
+@Include=fourdirectionkeys.inc
 
 [Metadata]
 Author=Joehu
@@ -7,86 +7,8 @@ Version=1.0
 License=MIT License
 Information=A key counter that shows when the arrow keys are pressed.
 
-[measureUpKey]
-Measure=Plugin
-Plugin=HotKey
-HotKey=Up
-KeyDownAction=[!SetOption meterWKey SolidColor 192,102,151,100][!UpdateMeter meterWKey][!Redraw]
-KeyUpAction=[!SetOption meterWKey SolidColor 0,0,0,100][!UpdateMeter meterWKey][!Redraw]
-
-[measureLeftKey]
-Measure=Plugin
-Plugin=HotKey
-HotKey=Left
-KeyDownAction=[!SetOption meterAKey SolidColor 192,102,151,100][!UpdateMeter meterAKey][!Redraw]
-KeyUpAction=[!SetOption meterAKey SolidColor 0,0,0,100][!UpdateMeter meterAKey][!Redraw]
-
-[measureDownKey]
-Measure=Plugin
-Plugin=HotKey
-HotKey=Down
-KeyDownAction=[!SetOption meterSKey SolidColor 192,102,151,100][!UpdateMeter meterSKey][!Redraw]
-KeyUpAction=[!SetOption meterSKey SolidColor 0,0,0,100][!UpdateMeter meterSKey][!Redraw]
-
-[measureRightKey]
-Measure=Plugin
-Plugin=HotKey
-HotKey=Right
-KeyDownAction=[!SetOption meterDKey SolidColor 192,102,151,100][!UpdateMeter meterDKey][!Redraw]
-KeyUpAction=[!SetOption meterDKey SolidColor 0,0,0,100][!UpdateMeter meterDKey][!Redraw]
-
-[meterWKey]
-Meter=String
-Text=Up
-StringAlign=CenterCenter
-X=150
-Y=25
-W=100
-H=50
-FontFace=#FontFace#
-FontColor=255,255,255
-FontSize=20
-AntiAlias=1
-SolidColor=0,0,0,100
-
-[meterAKey]
-Meter=String
-Text=Left
-StringAlign=CenterCenter
-X=50
-Y=75
-W=100
-H=50
-FontFace=#FontFace#
-FontColor=255,255,255
-FontSize=20
-AntiAlias=1
-SolidColor=0,0,0,100
-
-[meterSKey]
-Meter=String
-Text=Down
-StringAlign=CenterCenter
-X=R
-Y=r
-W=100
-H=50
-FontFace=#FontFace#
-FontColor=255,255,255
-FontSize=20
-AntiAlias=1
-SolidColor=0,0,0,100
-
-[meterDKey]
-Meter=String
-Text=Right
-StringAlign=CenterCenter
-X=R
-Y=r
-W=100
-H=50
-FontFace=#FontFace#
-FontColor=255,255,255
-FontSize=20
-AntiAlias=1
-SolidColor=0,0,0,100
+[Variables]
+Up=Up
+Left=Left
+Down=Down
+Right=Right
