Fix speech not working on osu! scorecards due to removed condition
Also makes the volume icon an actual toggle instead of a button to annouce.

--- a/Games/osu!/Recent/Recent.ini
+++ b/Games/osu!/Recent/Recent.ini
@@ -11,6 +11,7 @@ Information=Get the recent score of a user.
 Type=recent
 Fails=1
 Limit=1
+Muted=0
 
 [measureData]
 URL=#HostName#/users/#UserID#/scores/#Type#?include_fails=#Fails#&mode=#Mode#&limit=#Limit#
