--- a/Games/osu!/Best/Best.ini
+++ b/Games/osu!/Best/Best.ini
@@ -12,6 +12,7 @@ Type=best
 Limit=1
 Say=[!Delay 5000][!CommandMeasure SpeechHost "best score is [measureTitle], [measureVersion] diff with [measureMiss] miss and worth [measurePPSpeech]"]
 ShowExtendedStatsOnStart=0
+Muted=0
 
 [measureData]
 URL=#HostName#/users/#UserID#/scores/#Type#?mode=#Mode#&limit=#Limit#
