Rename YouTube now playing skin to web
WebNowPlaying is not only limited to YouTube.

--- a/NowPlaying/Web.ini
+++ b/NowPlaying/Web.ini
@@ -5,7 +5,7 @@
 Author=Joehu
 Version=1.0
 License=MIT License
-Information=Uses WebNowPlaying to show current song playing on YouTube.
+Information=Uses WebNowPlaying to show current media playing on web.
 
 [measureArtist]
 Measure=Plugin
