Lowercase keys for simplicity

--- a/KeyCounter/WASD.ini
+++ b/KeyCounter/WASD.ini
@@ -8,7 +8,7 @@ License=MIT License
 Information=A key counter that shows when the W, A, S, and D keys are pressed.
 
 [Variables]
-Up=W
-Left=A
-Down=S
-Right=D
+Up=w
+Left=a
+Down=s
+Right=d
