--- a/KeyCounter/osu!.ini
+++ b/KeyCounter/osu!.ini
@@ -10,8 +10,8 @@ Information=A key counter for osu! keys.
 [Variables]
 ButtonWidth=100
 ButtonHeight=70
-Key1=Z
-Key2=X
+Key1=z
+Key2=x
 
 [measureKey1Counter]
 Measure=Loop
