Use default app locations instead of custom ones

--- a/Launchers/Battle.net/default.ini
+++ b/Launchers/Battle.net/default.ini
@@ -12,5 +12,5 @@ icon=[\xf835]
 
 [meterIcon]
 FontFace=#BrandFace#
-LeftMouseUpAction=["E:\Games\Battle.net\Battle.net Launcher.exe"]
+LeftMouseUpAction=["%programfiles(x86)%\Battle.net\Battle.net Launcher.exe"]
 ToolTipText=Battle.net
