Fix personal score loading background not hiding immediately after no recent score

--- a/Games/osu!/Recent/Recent.ini
+++ b/Games/osu!/Recent/Recent.ini
@@ -15,7 +15,7 @@ Muted=1
 
 [measureData]
 URL=#HostName#/users/#UserID#/scores/#Type#?include_fails=#Fails#&mode=#Mode#&limit=#Limit#
-OnRegExpErrorAction=#BaseOnRegExpErrorAction#[!HideMeter meterBestLoading][!HideMeter meterBestSpinnerBackground][!HideMeter meterBestLoadingSpinner][!Redraw]
+OnRegExpErrorAction=#BaseOnRegExpErrorAction#[!HideMeterGroup BestLoadingGroup][!Redraw]
 
 [measureBestData]
 Measure=WebParser
@@ -228,7 +228,7 @@ Shape=Rectangle 0,0,[meterBestLoading:W],[meterBestLoading:H],#CornerRadius# | F
 ;add placeholder option to hide errors
 Gradient=0 | 0,0,0,0 ; 0.0
 DynamicVariables=1
-Group=OpaqueBackgroundGroup
+Group=OpaqueBackgroundGroup | BestLoadingGroup
 Y=R
 X=r
 
