Rename key hover to key highlight

--- a/KeyCounter/osu!.ini
+++ b/KeyCounter/osu!.ini
@@ -29,15 +29,15 @@ UpdateDivider=-1
 Measure=Plugin
 Plugin=HotKey
 HotKey=#Key1#
-KeyDownAction=[!SetOption meterKey1Hover Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterKey1Hover][!SetOption measureKey1Pressed Formula 1][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
-KeyUpAction=[!SetOption meterKey1Hover Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterKey1Hover][!SetOption measureKey1Pressed Formula 0][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
+KeyDownAction=[!SetOption meterKey1Highlight Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterKey1Highlight][!SetOption measureKey1Pressed Formula 1][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
+KeyUpAction=[!SetOption meterKey1Highlight Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterKey1Highlight][!SetOption measureKey1Pressed Formula 0][!UpdateMeasure measureKey1Pressed][!UpdateMeter meterKey1][!Redraw]
 
 [measureKey2]
 Measure=Plugin
 Plugin=HotKey
 HotKey=#Key2#
-KeyDownAction=[!SetOption meterKey2Hover Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterKey2Hover][!SetOption measureKey2Pressed Formula 1][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
-KeyUpAction=[!SetOption meterKey2Hover Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterKey2Hover][!SetOption measureKey2Pressed Formula 0][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
+KeyDownAction=[!SetOption meterKey2Highlight Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterKey2Highlight][!SetOption measureKey2Pressed Formula 1][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
+KeyUpAction=[!SetOption meterKey2Highlight Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterKey2Highlight][!SetOption measureKey2Pressed Formula 0][!UpdateMeasure measureKey2Pressed][!UpdateMeter meterKey2][!Redraw]
 
 [measureKey1Pressed]
 Measure=Calc
@@ -59,7 +59,7 @@ Gradient=0 | 0,0,0,0 ; 0.0
 DynamicVariables=1
 Group=BackgroundGroup
 
-[meterKey1Hover]
+[meterKey1Highlight]
 Meter=Shape
 Shape=Rectangle 0,0,#ButtonWidth#,#ButtonHeight#,#CornerRadius# | Extend Highlight | StrokeWidth 0
 ;add placeholder option to hide errors
@@ -89,7 +89,7 @@ Gradient=0 | 0,0,0,0 ; 0.0
 DynamicVariables=1
 Group=OpaqueBackgroundGroup
 
-[meterKey2Hover]
+[meterKey2Highlight]
 Meter=Shape
 Shape=Rectangle 0,0,#ButtonWidth#,#ButtonHeight#,#CornerRadius# | Extend Highlight | StrokeWidth 0
 ;add placeholder option to hide errors
